In which our hero: * fixed some typos * did some code refactoring * introduced romsdownload, romsemulator, romsmode and wowroms as search engines * introduced sqlite3 as database to store some data which will be later used for configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,18 +8,24 @@ set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS})
 set(CMAKE_VERBOSE_MAKEFILE on)
 set(THREADS_PREFER_PTHREAD_FLAG on)
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH true)
-#set(CMAKE_SKIP_RPATH true)
-#set(CMAKE_SKIP_INSTALL_RPATH true)
 
 find_package(SDL2 REQUIRED)
 find_package(SDL2_image REQUIRED)
 find_package(SDL2_ttf REQUIRED)
 find_package(CURL REQUIRED)
+find_package(SQLite3 REQUIRED)
 find_package(Threads REQUIRED)
+find_package(OpenSSL REQUIRED)
 
 set(SOURCES
         main.c
         config.h
+        database/init.c
+        database/init.h
+        database/sytems.c
+        database/sytems.h
+        download/utils.c
+        download/utils.h
         engine/curlling.c
         engine/curlling.h
         engine/enginehandler.c
@@ -30,13 +36,33 @@ set(SOURCES
         engine/romsmania/mapping.h
         engine/romsmania/romsmania.c
         engine/romsmania/romsmania.h
+        engine/romsmode/mapping.c
+        engine/romsmode/mapping.h
+        engine/romsmode/romsmode.c
+        engine/romsmode/romsmode.h
+        engine/romsdownload/mapping.h
+        engine/romsdownload/romsdownload.c
+        engine/romsdownload/romsdownload.h
+        engine/romsdownload/mapping.c
+        engine/romsemulator/mapping.c
+        engine/romsemulator/mapping.h
+        engine/romsemulator/romsemulator.c
+        engine/romsemulator/romsemulator.h
+        engine/urlhandling.c
+        engine/urlhandling.h
+        engine/wowroms/mapping.c
+        engine/wowroms/mapping.h
+        engine/wowroms/wowroms.c
+        engine/wowroms/wowroms.h
         helper/entities.c
         helper/entities.h
+        helper/md5.c
+        helper/md5.h
+        helper/regex.c
+        helper/regex.h
         helper/utils.c
         helper/utils.h
         structs.h
-        systems.c
-        systems.h
         ui/core.c
         ui/core.h
         ui/fonts.c
@@ -70,16 +96,16 @@ set(SOURCES
 set(RESOURCE_FILES
         resources/gfx/FreeSans.ttf
         resources/gfx/selector.png
-        resources/wallpaper.jpg
+        resources/gfx/wallpaper.jpg
         )
 
 set(SCRIPT_FILES
-        "resources/gfx/ROM Fetcher.sh"
+        "resources/ROM Fetcher.sh"
         )
 
-include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIRS} ${CURL_INCLUDE_DIRS})
+include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIRS} ${CURL_INCLUDE_DIRS} ${SQLite3_INCLUDE_DIRS} ${OPENSSL_INCLUDE_DIR})
 add_executable(romfetcher ${SOURCES})
-target_link_libraries(romfetcher ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2TTF_LIBRARY} ${CURL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(romfetcher ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2TTF_LIBRARY} ${CURL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${SQLite3_LIBRARIES} ${OPENSSL_LIBRARIES})
 install(TARGETS romfetcher DESTINATION bin)
 install(FILES ${RESOURCE_FILES} DESTINATION share/romfetcher)
 install(FILES ${SCRIPT_FILES} DESTINATION /home/pi/RetroPie/retropiemenu)
@@ -89,12 +115,12 @@ set(CPACK_PACKAGE_VENDOR "Maximilian Voss (maximlian@voss.rocks)")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
 
 set(CPACK_PACKAGE_VERSION_MAJOR "1")
-set(CPACK_PACKAGE_VERSION_MINOR "0")
+set(CPACK_PACKAGE_VERSION_MINOR "1")
 set(CPACK_PACKAGE_VERSION_PATCH "0")
 
 
 set(CPACK_GENERATOR "DEB")
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Maximilian Voss")
-set(CPACK_DEBIAN_PACKAGE_DEPENDS, "libsdl2-2.0-0 (>=2.0.8), libsdl2-ttf-2.0-0 (>=2.0.14), libsdl2-image-2.0-0 (>=2.0.3)")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS, "libsdl2-2.0-0 (>=2.0.8), libsdl2-ttf-2.0-0 (>=2.0.14), libsdl2-image-2.0-0 (>=2.0.3), libsqlite3-0 (>=3.22.0), openssl (>=1.1.1)")
 set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "https://github.com/maximilianvoss/romfetcher")
 include(CPack)
