In which our hero moved a lot of files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,6 @@ project(romfetcher C)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_INSTALL_PREFIX /usr)
-set(CMAKE_VERBOSE_MAKEFILE on)
 set(THREADS_PREFER_PTHREAD_FLAG on)
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH true)
 
@@ -23,6 +22,7 @@ add_subdirectory(libs/json2map)
 include_directories(libs/json2map)
 
 if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
+    set(CMAKE_VERBOSE_MAKEFILE on)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -DDEVELOP")
     set(CMAKE_INSTALL_PREFIX /usr/local)
 else ()
@@ -30,96 +30,96 @@ else ()
 endif ()
 
 set(SOURCES
-        main.c
-        config.h
-        database/config.c
-        database/config.h
-        database/init.c
-        database/init.h
-        database/sytems.c
-        database/sytems.h
-        engine/curlling.c
-        engine/curlling.h
-        engine/enginehandler.c
-        engine/enginehandler.h
-        engine/results.c
-        engine/results.h
-        engine/romsdownload/mapping.c
-        engine/romsdownload/mapping.h
-        engine/romsdownload/romsdownload.c
-        engine/romsdownload/romsdownload.h
-        engine/romsemulator/mapping.c
-        engine/romsemulator/mapping.h
-        engine/romsemulator/romsemulator.c
-        engine/romsemulator/romsemulator.h
-        engine/romsmania/mapping.c
-        engine/romsmania/mapping.h
-        engine/romsmania/romsmania.c
-        engine/romsmania/romsmania.h
-        engine/romsmode/mapping.c
-        engine/romsmode/mapping.h
-        engine/romsmode/romsmode.c
-        engine/romsmode/romsmode.h
-        engine/urlhandling.c
-        engine/urlhandling.h
-        engine/wowroms/mapping.c
-        engine/wowroms/mapping.h
-        engine/wowroms/wowroms.c
-        engine/wowroms/wowroms.h
-        enums.h
-        helper/entities.c
-        helper/entities.h
-        helper/linkedlist.c
-        helper/linkedlist.h
-        helper/map.c
-        helper/map.h
-        helper/md5.c
-        helper/md5.h
-        helper/path.c
-        helper/path.h
-        helper/regex.c
-        helper/regex.h
-        helper/utils.c
-        helper/utils.h
-        structs.h
-        themes/loading.c
-        themes/loading.h
-        themes/rendering.c
-        themes/rendering.h
-        ui/core.c
-        ui/core.h
-        ui/fonts.c
-        ui/fonts.h
-        ui/inputconfig.c
-        ui/inputconfig.h
-        ui/inputlist.c
-        ui/inputlist.h
-        ui/inputdownload.c
-        ui/inputdownload.h
-        ui/inputhandler.c
-        ui/inputhandler.h
-        ui/inputkeyboard.c
-        ui/inputkeyboard.h
-        ui/inputsearch.c
-        ui/inputsearch.h
-        ui/rendering.c
-        ui/rendering.h
-        ui/statehandler.c
-        ui/statehandler.h
-        ui/textures.c
-        ui/textures.h
-        ui/uiconfig.c
-        ui/uiconfig.h
-        ui/uilist.c
-        ui/uilist.h
-        ui/uidownload.c
-        ui/uidownload.h
-        ui/uihandler.c
-        ui/uihandler.h
-        ui/uikeyboard.c
-        ui/uikeyboard.h
-        ui/uisearch.c
-        ui/uisearch.h
+        src/main.c
+        src/config.h
+        src/database/config.c
+        src/database/config.h
+        src/database/init.c
+        src/database/init.h
+        src/database/sytems.c
+        src/database/sytems.h
+        src/engine/curlling.c
+        src/engine/curlling.h
+        src/engine/enginehandler.c
+        src/engine/enginehandler.h
+        src/engine/results.c
+        src/engine/results.h
+        src/engine/romsdownload/mapping.c
+        src/engine/romsdownload/mapping.h
+        src/engine/romsdownload/romsdownload.c
+        src/engine/romsdownload/romsdownload.h
+        src/engine/romsemulator/mapping.c
+        src/engine/romsemulator/mapping.h
+        src/engine/romsemulator/romsemulator.c
+        src/engine/romsemulator/romsemulator.h
+        src/engine/romsmania/mapping.c
+        src/engine/romsmania/mapping.h
+        src/engine/romsmania/romsmania.c
+        src/engine/romsmania/romsmania.h
+        src/engine/romsmode/mapping.c
+        src/engine/romsmode/mapping.h
+        src/engine/romsmode/romsmode.c
+        src/engine/romsmode/romsmode.h
+        src/engine/urlhandling.c
+        src/engine/urlhandling.h
+        src/engine/wowroms/mapping.c
+        src/engine/wowroms/mapping.h
+        src/engine/wowroms/wowroms.c
+        src/engine/wowroms/wowroms.h
+        src/enums.h
+        src/helper/entities.c
+        src/helper/entities.h
+        src/helper/linkedlist.c
+        src/helper/linkedlist.h
+        src/helper/map.c
+        src/helper/map.h
+        src/helper/md5.c
+        src/helper/md5.h
+        src/helper/path.c
+        src/helper/path.h
+        src/helper/regex.c
+        src/helper/regex.h
+        src/helper/utils.c
+        src/helper/utils.h
+        src/structs.h
+        src/themes/loading.c
+        src/themes/loading.h
+        src/themes/rendering.c
+        src/themes/rendering.h
+        src/ui/core.c
+        src/ui/core.h
+        src/ui/fonts.c
+        src/ui/fonts.h
+        src/ui/inputconfig.c
+        src/ui/inputconfig.h
+        src/ui/inputlist.c
+        src/ui/inputlist.h
+        src/ui/inputdownload.c
+        src/ui/inputdownload.h
+        src/ui/inputhandler.c
+        src/ui/inputhandler.h
+        src/ui/inputkeyboard.c
+        src/ui/inputkeyboard.h
+        src/ui/inputsearch.c
+        src/ui/inputsearch.h
+        src/ui/rendering.c
+        src/ui/rendering.h
+        src/ui/statehandler.c
+        src/ui/statehandler.h
+        src/ui/textures.c
+        src/ui/textures.h
+        src/ui/uiconfig.c
+        src/ui/uiconfig.h
+        src/ui/uilist.c
+        src/ui/uilist.h
+        src/ui/uidownload.c
+        src/ui/uidownload.h
+        src/ui/uihandler.c
+        src/ui/uihandler.h
+        src/ui/uikeyboard.c
+        src/ui/uikeyboard.h
+        src/ui/uisearch.c
+        src/ui/uisearch.h
         )
 
 set(DEFAULT_THEME
