--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,6 @@ else ()
 endif ()
 
 set(SOURCES
-        src/main.c
         src/config.h
         src/config/advanced.c
         src/config/advanced.h
@@ -155,6 +154,21 @@ set(SOURCES
         src/ui/uisearch.h
         )
 
+set(TEST_SOURCES
+        test/engine_freeroms.c
+        test/engine_freeroms.h
+        test/engine_progameroms.c
+        test/engine_progameroms.h
+        test/engine_romhustler.c
+        test/engine_romhustler.h
+        test/engines.c
+        test/engines.h
+        test/systems.c
+        test/systems.h
+        test/test.c
+        test/test.h
+        )
+
 set(DEFAULT_THEME
         resources/themes/default/FreeSans.ttf
         resources/themes/default/checkbox_checked.png
@@ -170,7 +184,7 @@ set(SCRIPT_FILES
         )
 
 include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIRS} ${CURL_INCLUDE_DIRS} ${SQLite3_INCLUDE_DIRS} ${OPENSSL_INCLUDE_DIR})
-add_executable(romfetcher ${SOURCES})
+add_executable(romfetcher src/main.c ${SOURCES})
 target_link_libraries(romfetcher csafestring json2map ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2TTF_LIBRARY} ${CURL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${SQLite3_LIBRARIES} ${OPENSSL_LIBRARIES})
 install(TARGETS romfetcher DESTINATION bin)
 install(FILES ${DEFAULT_THEME} DESTINATION share/romfetcher/themes/default)
@@ -184,9 +198,165 @@ set(CPACK_PACKAGE_VERSION_MAJOR "1")
 set(CPACK_PACKAGE_VERSION_MINOR "2")
 set(CPACK_PACKAGE_VERSION_PATCH "0")
 
-
 set(CPACK_GENERATOR "DEB")
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Maximilian Voss")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS, "libsdl2-2.0-0 (>=2.0.8), libsdl2-ttf-2.0-0 (>=2.0.14), libsdl2-image-2.0-0 (>=2.0.3), libsqlite3-0 (>=3.22.0), openssl (>=1.1.1)")
 set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "https://github.com/maximilianvoss/romfetcher")
 include(CPack)
+
+enable_testing()
+add_executable(romfetcher_testcases ${SOURCES} ${TEST_SOURCES})
+target_link_libraries(romfetcher_testcases csafestring json2map ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2TTF_LIBRARY} ${CURL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${SQLite3_LIBRARIES} ${OPENSSL_LIBRARIES})
+
+add_test(NAME test_engine_freeroms_3do COMMAND romfetcher_testcases test_engine_freeroms_3do)
+add_test(NAME test_engine_freeroms_amiga COMMAND romfetcher_testcases test_engine_freeroms_amiga)
+add_test(NAME test_engine_freeroms_atari2600 COMMAND romfetcher_testcases test_engine_freeroms_atari2600)
+add_test(NAME test_engine_freeroms_atari7800 COMMAND romfetcher_testcases test_engine_freeroms_atari7800)
+add_test(NAME test_engine_freeroms_atarijaguar COMMAND romfetcher_testcases test_engine_freeroms_atarijaguar)
+add_test(NAME test_engine_freeroms_atarilynx COMMAND romfetcher_testcases test_engine_freeroms_atarilynx)
+add_test(NAME test_engine_freeroms_atarist COMMAND romfetcher_testcases test_engine_freeroms_atarist)
+add_test(NAME test_engine_freeroms_c64 COMMAND romfetcher_testcases test_engine_freeroms_c64)
+add_test(NAME test_engine_freeroms_dreamcast COMMAND romfetcher_testcases test_engine_freeroms_dreamcast)
+add_test(NAME test_engine_freeroms_fba COMMAND romfetcher_testcases test_engine_freeroms_fba)
+add_test(NAME test_engine_freeroms_fds COMMAND romfetcher_testcases test_engine_freeroms_fds)
+add_test(NAME test_engine_freeroms_gamegear COMMAND romfetcher_testcases test_engine_freeroms_gamegear)
+add_test(NAME test_engine_freeroms_gb COMMAND romfetcher_testcases test_engine_freeroms_gb)
+add_test(NAME test_engine_freeroms_gba COMMAND romfetcher_testcases test_engine_freeroms_gba)
+add_test(NAME test_engine_freeroms_gbc COMMAND romfetcher_testcases test_engine_freeroms_gbc)
+add_test(NAME test_engine_freeroms_gc COMMAND romfetcher_testcases test_engine_freeroms_gc)
+add_test(NAME test_engine_freeroms_genesis COMMAND romfetcher_testcases test_engine_freeroms_genesis)
+add_test(NAME test_engine_freeroms_gw COMMAND romfetcher_testcases test_engine_freeroms_gw)
+add_test(NAME test_engine_freeroms_love COMMAND romfetcher_testcases test_engine_freeroms_love)
+add_test(NAME test_engine_freeroms_mame COMMAND romfetcher_testcases test_engine_freeroms_mame)
+add_test(NAME test_engine_freeroms_mastersystem COMMAND romfetcher_testcases test_engine_freeroms_mastersystem)
+add_test(NAME test_engine_freeroms_megadrive COMMAND romfetcher_testcases test_engine_freeroms_megadrive)
+add_test(NAME test_engine_freeroms_msx COMMAND romfetcher_testcases test_engine_freeroms_msx)
+add_test(NAME test_engine_freeroms_n64 COMMAND romfetcher_testcases test_engine_freeroms_n64)
+add_test(NAME test_engine_freeroms_nds COMMAND romfetcher_testcases test_engine_freeroms_nds)
+add_test(NAME test_engine_freeroms_neogeo COMMAND romfetcher_testcases test_engine_freeroms_neogeo)
+add_test(NAME test_engine_freeroms_nes COMMAND romfetcher_testcases test_engine_freeroms_nes)
+add_test(NAME test_engine_freeroms_ngp COMMAND romfetcher_testcases test_engine_freeroms_ngp)
+add_test(NAME test_engine_freeroms_ngpc COMMAND romfetcher_testcases test_engine_freeroms_ngpc)
+add_test(NAME test_engine_freeroms_pc COMMAND romfetcher_testcases test_engine_freeroms_pc)
+add_test(NAME test_engine_freeroms_pcengine COMMAND romfetcher_testcases test_engine_freeroms_pcengine)
+add_test(NAME test_engine_freeroms_pcfx COMMAND romfetcher_testcases test_engine_freeroms_pcfx)
+add_test(NAME test_engine_freeroms_ps2 COMMAND romfetcher_testcases test_engine_freeroms_ps2)
+add_test(NAME test_engine_freeroms_psp COMMAND romfetcher_testcases test_engine_freeroms_psp)
+add_test(NAME test_engine_freeroms_psx COMMAND romfetcher_testcases test_engine_freeroms_psx)
+add_test(NAME test_engine_freeroms_saturn COMMAND romfetcher_testcases test_engine_freeroms_saturn)
+add_test(NAME test_engine_freeroms_scummvm COMMAND romfetcher_testcases test_engine_freeroms_scummvm)
+add_test(NAME test_engine_freeroms_sega32x COMMAND romfetcher_testcases test_engine_freeroms_sega32x)
+add_test(NAME test_engine_freeroms_segacd COMMAND romfetcher_testcases test_engine_freeroms_segacd)
+add_test(NAME test_engine_freeroms_sg1000 COMMAND romfetcher_testcases test_engine_freeroms_sg1000)
+add_test(NAME test_engine_freeroms_snes COMMAND romfetcher_testcases test_engine_freeroms_snes)
+add_test(NAME test_engine_freeroms_vectrex COMMAND romfetcher_testcases test_engine_freeroms_vectrex)
+add_test(NAME test_engine_freeroms_videopac COMMAND romfetcher_testcases test_engine_freeroms_videopac)
+add_test(NAME test_engine_freeroms_virtualboy COMMAND romfetcher_testcases test_engine_freeroms_virtualboy)
+add_test(NAME test_engine_freeroms_wii COMMAND romfetcher_testcases test_engine_freeroms_wii)
+add_test(NAME test_engine_freeroms_wiiu COMMAND romfetcher_testcases test_engine_freeroms_wiiu)
+add_test(NAME test_engine_freeroms_wonderswan COMMAND romfetcher_testcases test_engine_freeroms_wonderswan)
+add_test(NAME test_engine_freeroms_wonderswancolor COMMAND romfetcher_testcases test_engine_freeroms_wonderswancolor)
+add_test(NAME test_engine_freeroms_zxspectrum COMMAND romfetcher_testcases test_engine_freeroms_zxspectrum)
+add_test(NAME test_engine_freeroms_download COMMAND romfetcher_testcases test_engine_freeroms_download)
+
+add_test(NAME test_engine_progameroms_3do COMMAND romfetcher_testcases test_engine_progameroms_3do)
+add_test(NAME test_engine_progameroms_amiga COMMAND romfetcher_testcases test_engine_progameroms_amiga)
+add_test(NAME test_engine_progameroms_atari2600 COMMAND romfetcher_testcases test_engine_progameroms_atari2600)
+add_test(NAME test_engine_progameroms_atari7800 COMMAND romfetcher_testcases test_engine_progameroms_atari7800)
+add_test(NAME test_engine_progameroms_atarijaguar COMMAND romfetcher_testcases test_engine_progameroms_atarijaguar)
+add_test(NAME test_engine_progameroms_atarilynx COMMAND romfetcher_testcases test_engine_progameroms_atarilynx)
+add_test(NAME test_engine_progameroms_atarist COMMAND romfetcher_testcases test_engine_progameroms_atarist)
+add_test(NAME test_engine_progameroms_c64 COMMAND romfetcher_testcases test_engine_progameroms_c64)
+add_test(NAME test_engine_progameroms_dreamcast COMMAND romfetcher_testcases test_engine_progameroms_dreamcast)
+add_test(NAME test_engine_progameroms_fba COMMAND romfetcher_testcases test_engine_progameroms_fba)
+add_test(NAME test_engine_progameroms_fds COMMAND romfetcher_testcases test_engine_progameroms_fds)
+add_test(NAME test_engine_progameroms_gamegear COMMAND romfetcher_testcases test_engine_progameroms_gamegear)
+add_test(NAME test_engine_progameroms_gb COMMAND romfetcher_testcases test_engine_progameroms_gb)
+add_test(NAME test_engine_progameroms_gba COMMAND romfetcher_testcases test_engine_progameroms_gba)
+add_test(NAME test_engine_progameroms_gbc COMMAND romfetcher_testcases test_engine_progameroms_gbc)
+add_test(NAME test_engine_progameroms_gc COMMAND romfetcher_testcases test_engine_progameroms_gc)
+add_test(NAME test_engine_progameroms_genesis COMMAND romfetcher_testcases test_engine_progameroms_genesis)
+add_test(NAME test_engine_progameroms_gw COMMAND romfetcher_testcases test_engine_progameroms_gw)
+add_test(NAME test_engine_progameroms_love COMMAND romfetcher_testcases test_engine_progameroms_love)
+add_test(NAME test_engine_progameroms_mame COMMAND romfetcher_testcases test_engine_progameroms_mame)
+add_test(NAME test_engine_progameroms_mastersystem COMMAND romfetcher_testcases test_engine_progameroms_mastersystem)
+add_test(NAME test_engine_progameroms_megadrive COMMAND romfetcher_testcases test_engine_progameroms_megadrive)
+add_test(NAME test_engine_progameroms_msx COMMAND romfetcher_testcases test_engine_progameroms_msx)
+add_test(NAME test_engine_progameroms_n64 COMMAND romfetcher_testcases test_engine_progameroms_n64)
+add_test(NAME test_engine_progameroms_nds COMMAND romfetcher_testcases test_engine_progameroms_nds)
+add_test(NAME test_engine_progameroms_neogeo COMMAND romfetcher_testcases test_engine_progameroms_neogeo)
+add_test(NAME test_engine_progameroms_nes COMMAND romfetcher_testcases test_engine_progameroms_nes)
+add_test(NAME test_engine_progameroms_ngp COMMAND romfetcher_testcases test_engine_progameroms_ngp)
+add_test(NAME test_engine_progameroms_ngpc COMMAND romfetcher_testcases test_engine_progameroms_ngpc)
+add_test(NAME test_engine_progameroms_pc COMMAND romfetcher_testcases test_engine_progameroms_pc)
+add_test(NAME test_engine_progameroms_pcengine COMMAND romfetcher_testcases test_engine_progameroms_pcengine)
+add_test(NAME test_engine_progameroms_pcfx COMMAND romfetcher_testcases test_engine_progameroms_pcfx)
+add_test(NAME test_engine_progameroms_ps2 COMMAND romfetcher_testcases test_engine_progameroms_ps2)
+add_test(NAME test_engine_progameroms_psp COMMAND romfetcher_testcases test_engine_progameroms_psp)
+add_test(NAME test_engine_progameroms_psx COMMAND romfetcher_testcases test_engine_progameroms_psx)
+add_test(NAME test_engine_progameroms_saturn COMMAND romfetcher_testcases test_engine_progameroms_saturn)
+add_test(NAME test_engine_progameroms_scummvm COMMAND romfetcher_testcases test_engine_progameroms_scummvm)
+add_test(NAME test_engine_progameroms_sega32x COMMAND romfetcher_testcases test_engine_progameroms_sega32x)
+add_test(NAME test_engine_progameroms_segacd COMMAND romfetcher_testcases test_engine_progameroms_segacd)
+add_test(NAME test_engine_progameroms_sg1000 COMMAND romfetcher_testcases test_engine_progameroms_sg1000)
+add_test(NAME test_engine_progameroms_snes COMMAND romfetcher_testcases test_engine_progameroms_snes)
+add_test(NAME test_engine_progameroms_vectrex COMMAND romfetcher_testcases test_engine_progameroms_vectrex)
+add_test(NAME test_engine_progameroms_videopac COMMAND romfetcher_testcases test_engine_progameroms_videopac)
+add_test(NAME test_engine_progameroms_virtualboy COMMAND romfetcher_testcases test_engine_progameroms_virtualboy)
+add_test(NAME test_engine_progameroms_wii COMMAND romfetcher_testcases test_engine_progameroms_wii)
+add_test(NAME test_engine_progameroms_wiiu COMMAND romfetcher_testcases test_engine_progameroms_wiiu)
+add_test(NAME test_engine_progameroms_wonderswan COMMAND romfetcher_testcases test_engine_progameroms_wonderswan)
+add_test(NAME test_engine_progameroms_wonderswancolor COMMAND romfetcher_testcases test_engine_progameroms_wonderswancolor)
+add_test(NAME test_engine_progameroms_zxspectrum COMMAND romfetcher_testcases test_engine_progameroms_zxspectrum)
+add_test(NAME test_engine_progameroms_download COMMAND romfetcher_testcases test_engine_progameroms_download)
+
+add_test(NAME test_engine_romhustler_3do COMMAND romfetcher_testcases test_engine_romhustler_3do)
+add_test(NAME test_engine_romhustler_amiga COMMAND romfetcher_testcases test_engine_romhustler_amiga)
+add_test(NAME test_engine_romhustler_atari2600 COMMAND romfetcher_testcases test_engine_romhustler_atari2600)
+add_test(NAME test_engine_romhustler_atari7800 COMMAND romfetcher_testcases test_engine_romhustler_atari7800)
+add_test(NAME test_engine_romhustler_atarijaguar COMMAND romfetcher_testcases test_engine_romhustler_atarijaguar)
+add_test(NAME test_engine_romhustler_atarilynx COMMAND romfetcher_testcases test_engine_romhustler_atarilynx)
+add_test(NAME test_engine_romhustler_atarist COMMAND romfetcher_testcases test_engine_romhustler_atarist)
+add_test(NAME test_engine_romhustler_c64 COMMAND romfetcher_testcases test_engine_romhustler_c64)
+add_test(NAME test_engine_romhustler_dreamcast COMMAND romfetcher_testcases test_engine_romhustler_dreamcast)
+add_test(NAME test_engine_romhustler_fba COMMAND romfetcher_testcases test_engine_romhustler_fba)
+add_test(NAME test_engine_romhustler_fds COMMAND romfetcher_testcases test_engine_romhustler_fds)
+add_test(NAME test_engine_romhustler_gamegear COMMAND romfetcher_testcases test_engine_romhustler_gamegear)
+add_test(NAME test_engine_romhustler_gb COMMAND romfetcher_testcases test_engine_romhustler_gb)
+add_test(NAME test_engine_romhustler_gba COMMAND romfetcher_testcases test_engine_romhustler_gba)
+add_test(NAME test_engine_romhustler_gbc COMMAND romfetcher_testcases test_engine_romhustler_gbc)
+add_test(NAME test_engine_romhustler_gc COMMAND romfetcher_testcases test_engine_romhustler_gc)
+add_test(NAME test_engine_romhustler_genesis COMMAND romfetcher_testcases test_engine_romhustler_genesis)
+add_test(NAME test_engine_romhustler_gw COMMAND romfetcher_testcases test_engine_romhustler_gw)
+add_test(NAME test_engine_romhustler_love COMMAND romfetcher_testcases test_engine_romhustler_love)
+add_test(NAME test_engine_romhustler_mame COMMAND romfetcher_testcases test_engine_romhustler_mame)
+add_test(NAME test_engine_romhustler_mastersystem COMMAND romfetcher_testcases test_engine_romhustler_mastersystem)
+add_test(NAME test_engine_romhustler_megadrive COMMAND romfetcher_testcases test_engine_romhustler_megadrive)
+add_test(NAME test_engine_romhustler_msx COMMAND romfetcher_testcases test_engine_romhustler_msx)
+add_test(NAME test_engine_romhustler_n64 COMMAND romfetcher_testcases test_engine_romhustler_n64)
+add_test(NAME test_engine_romhustler_nds COMMAND romfetcher_testcases test_engine_romhustler_nds)
+add_test(NAME test_engine_romhustler_neogeo COMMAND romfetcher_testcases test_engine_romhustler_neogeo)
+add_test(NAME test_engine_romhustler_nes COMMAND romfetcher_testcases test_engine_romhustler_nes)
+add_test(NAME test_engine_romhustler_ngp COMMAND romfetcher_testcases test_engine_romhustler_ngp)
+add_test(NAME test_engine_romhustler_ngpc COMMAND romfetcher_testcases test_engine_romhustler_ngpc)
+add_test(NAME test_engine_romhustler_pc COMMAND romfetcher_testcases test_engine_romhustler_pc)
+add_test(NAME test_engine_romhustler_pcengine COMMAND romfetcher_testcases test_engine_romhustler_pcengine)
+add_test(NAME test_engine_romhustler_pcfx COMMAND romfetcher_testcases test_engine_romhustler_pcfx)
+add_test(NAME test_engine_romhustler_ps2 COMMAND romfetcher_testcases test_engine_romhustler_ps2)
+add_test(NAME test_engine_romhustler_psp COMMAND romfetcher_testcases test_engine_romhustler_psp)
+add_test(NAME test_engine_romhustler_psx COMMAND romfetcher_testcases test_engine_romhustler_psx)
+add_test(NAME test_engine_romhustler_saturn COMMAND romfetcher_testcases test_engine_romhustler_saturn)
+add_test(NAME test_engine_romhustler_scummvm COMMAND romfetcher_testcases test_engine_romhustler_scummvm)
+add_test(NAME test_engine_romhustler_sega32x COMMAND romfetcher_testcases test_engine_romhustler_sega32x)
+add_test(NAME test_engine_romhustler_segacd COMMAND romfetcher_testcases test_engine_romhustler_segacd)
+add_test(NAME test_engine_romhustler_sg1000 COMMAND romfetcher_testcases test_engine_romhustler_sg1000)
+add_test(NAME test_engine_romhustler_snes COMMAND romfetcher_testcases test_engine_romhustler_snes)
+add_test(NAME test_engine_romhustler_vectrex COMMAND romfetcher_testcases test_engine_romhustler_vectrex)
+add_test(NAME test_engine_romhustler_videopac COMMAND romfetcher_testcases test_engine_romhustler_videopac)
+add_test(NAME test_engine_romhustler_virtualboy COMMAND romfetcher_testcases test_engine_romhustler_virtualboy)
+add_test(NAME test_engine_romhustler_wii COMMAND romfetcher_testcases test_engine_romhustler_wii)
+add_test(NAME test_engine_romhustler_wiiu COMMAND romfetcher_testcases test_engine_romhustler_wiiu)
+add_test(NAME test_engine_romhustler_wonderswan COMMAND romfetcher_testcases test_engine_romhustler_wonderswan)
+add_test(NAME test_engine_romhustler_wonderswancolor COMMAND romfetcher_testcases test_engine_romhustler_wonderswancolor)
+add_test(NAME test_engine_romhustler_zxspectrum COMMAND romfetcher_testcases test_engine_romhustler_zxspectrum)
+add_test(NAME test_engine_romhustler_download COMMAND romfetcher_testcases test_engine_romhustler_download)
