In which our hero updated the .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,9 @@ language: c
 compiler:
   - gcc
 
+before_install:
+  - sudo apt-get update
+  - sudo apt-get -y install libsdl2-ttf-dev libsdl2-image-dev libsdl2-dev libcurl4-openssl-dev libsqlite3-dev libcurl4-openssl-dev
+
 script:
   - cmake -G "Unix Makefiles" && make && make test
