In which our hero disabled download test case

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,7 +251,7 @@ add_test(NAME test_engine_freeroms_wiiu COMMAND romfetcher_testcases test_engine
 add_test(NAME test_engine_freeroms_wonderswan COMMAND romfetcher_testcases test_engine_freeroms_wonderswan)
 add_test(NAME test_engine_freeroms_wonderswancolor COMMAND romfetcher_testcases test_engine_freeroms_wonderswancolor)
 add_test(NAME test_engine_freeroms_zxspectrum COMMAND romfetcher_testcases test_engine_freeroms_zxspectrum)
-add_test(NAME test_engine_freeroms_download COMMAND romfetcher_testcases test_engine_freeroms_download)
+#add_test(NAME test_engine_freeroms_download COMMAND romfetcher_testcases test_engine_freeroms_download)
 
 add_test(NAME test_engine_romhustler_3do COMMAND romfetcher_testcases test_engine_romhustler_3do)
 add_test(NAME test_engine_romhustler_amiga COMMAND romfetcher_testcases test_engine_romhustler_amiga)
@@ -302,4 +302,4 @@ add_test(NAME test_engine_romhustler_wiiu COMMAND romfetcher_testcases test_engi
 add_test(NAME test_engine_romhustler_wonderswan COMMAND romfetcher_testcases test_engine_romhustler_wonderswan)
 add_test(NAME test_engine_romhustler_wonderswancolor COMMAND romfetcher_testcases test_engine_romhustler_wonderswancolor)
 add_test(NAME test_engine_romhustler_zxspectrum COMMAND romfetcher_testcases test_engine_romhustler_zxspectrum)
-add_test(NAME test_engine_romhustler_download COMMAND romfetcher_testcases test_engine_romhustler_download)
+#add_test(NAME test_engine_romhustler_download COMMAND romfetcher_testcases test_engine_romhustler_download)
