In which our hero added the option to run external curl to download files. This enables the app to be closed while downloads run in background during gaming sessions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,10 @@ set(SOURCES
         src/download/curlling.h
         src/download/downloader.c
         src/download/downloader.h
+        src/download/downloadercurl.c
+        src/download/downloadercurl.h
+        src/download/downloaderinternal.c
+        src/download/downloaderinternal.h
         src/download/downloadpipeline.c
         src/download/downloadpipeline.h
         src/engine/freeroms/freeroms.c
